--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,8 +2,10 @@
 + simplee
 
 0.2beta
+- cleanup + bugfixes
 - move simple things to simpleton/*
 - logging is now done in a separate goroutine
+- logging: add tests. coverage: 87.4%
 - refactor of logging api
 + cache (ObservingFileCache needs rethinking)
 
